Complete the two animation excercises

--- a/animation/01-button-hover/style.css
+++ b/animation/01-button-hover/style.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   font-family: Arial, sans-serif;
+  transition: width 1s;
 }
 
 button {
@@ -15,5 +16,10 @@ button {
   color: white;
   font-size: 18px;
   padding: 16px 24px;
-  text-align: center;
+  text-align: center;  
+  transition: transform .3s ease-in-out;
+}
+
+button:hover {
+  transform: scale(1.2);
 }
