--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -32,13 +32,14 @@ button {
   border: 1px solid black;
   border-radius: 10px;
   position: fixed;
-  top: 50%;
+  top: 0%;
   left: 50%;
   transform-origin: center;
   transform: translate(-50%, -50%);
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+  transition: opacity .7s, top .7s;
 }
 .popup-modal p {
   margin-bottom: 24px
@@ -54,6 +55,7 @@ button {
 
 .popup-modal.show {
   opacity: 100%;
+  top: 50%;
   pointer-events: all;
 }
 
